# thoth

./: README.md  SConstruct  create-iso.sh  grub.cfg  iso-run-qemu.sh  kernel-run-qemu.sh  meson.build  run-iso-qemu.sh  run-kernel-qemu.sh  test.sh
include/: SConscript
include/libc/: assert.h  ctype.h  stdio.h  stdlib.h  string.h
include/libcpp/: new
include/libkernel/interrupt/: idt.h  interrupt.h
include/libkernel/io/: pic.h  port.h
include/libkernel/sys/: out.h
include/libkernel/vga/: vga.h  vgastream.h
include/libthoth/: mem.h  sys.h  type.h  types.h
include/libthoth/dmm/: dmm.h
include/libthoth/io/: service.h
include/libthoth/stream/: stream.h
include/libthoth/term/: term.h
kernel/: SConscript  linker.ld
kernel/boot/: SConscript
kernel/boot/x86/: SConscript
kernel/boot/x86_64/: SConscript  boot.s  enterlong.s  multiboot.s  paging.s
kernel/lib/: SConscript
kernel/lib/libc/: SConscript  assert.c  ctype.c  stdio.c  stdlib.c  string.c
kernel/main/: SConscript  kernel.c  kernel.cpp  kernel.h  main.c  main.cpp
plan/: filesystem.txt
scons-test/: .sconsign.dblite  SConstruct
src/: SConscript  linker.ld
src/boot/: SConscript  boot.s  boot.s.old  enterlong.s  multiboot.s  paging.s
src/bootstrap/: boot.s
src/include/: SConscript
src/kernel/: SConscript  gdt.h  kernel.cpp  kernel.h  main.cpp  meson.build
src/kernel/c/: std.cpp  std.h
src/kernel/kernel/: kernel.cpp  meson.build
src/kernel/terminal/: terminal.cpp  terminal.h
src/kernel/thoth/: assert.cpp  assert.h  sys.h  types.h  vga.cpp  vga.h
src/lib/: SConscript
(+23 files in other folders)
